--- a/main.html
+++ b/main.html
@@ -6,6 +6,9 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+	<header class="header">
+
+	</header>
 
 </body>
 </html>
